MS: fixing update button in the wallet